# An-Interpreter

./: CMakeLists.txt  README.md  main.duck
src/: main.c
src/grammar/: grammar.h
src/parser/: parser.c  parser.h
src/tokenizer/: tokenizer.c  tokenizer.h
src/transpiler/: transpiler.c  transpiler.h
tests/: fun.duck  main.duck
